change choice button font and size

--- a/Safe/design.html
+++ b/Safe/design.html
@@ -126,7 +126,7 @@ body{
     font-size: 23px;
     font-weight: 200;
     color: white;
-    font-family: de-walpergens-pica;
+    font-family: IM Fell DW Pica;
     padding-left: 5%;
     border: none;
     background-color: black;
@@ -148,7 +148,7 @@ body{
   .startButton{
     font-family: Nosifer;
     color:red;
-    font-size:50px;
+    font-size:60px;
 
     background-color: black;
     border: none;
